backend/feature-flag-api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feature-flag-service
  namespace: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feature-flag-service
  template:
    metadata:
      labels:
        app: feature-flag-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: api
          image: ghcr.io/lsuthar-coder/feature-flag-service:latest
          ports:
            - containerPort: 4000
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 5
