backend/feature-flag-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feature-flag-service
  namespace: platform
spec:
  selector:
    app: feature-flag-service
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
