backend/feature-flag-api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feature-flag-service
  namespace: platform
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: flags.lsuthar.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: feature-flag-service
                port:
                  number: 4000
  tls:
    - secretName: feature-flag-tls
      hosts:
        - flags.lsuthar.in
